# claude_rest_api

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .env.testing.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.backend  README.md  conftest.py  docker-compose.local.yml  docker-compose.production.yml  docker-compose.testing.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  render.yaml  start.sh
.github/workflows/: backend-tests-and-formatting.yml  build-testing-images.yml  frontend-tests.yml  release-production.yml  robot-tests.yml  run_tests_and_formatting.yml  security-tests.yml
accounts/: admin.py  apps.py  models.py
accounts/migrations/: 0001_initial.py  0001_squashed_0005_customuser_cutover.py  0002_drop_profile.py  0002_unique_user_email.py  0003_enforce_sites_dependency.py  0004_repair_customuser_table.py  0005_repoint_non_blog_user_fks.py
blog/: api_urls.py  api_views.py  apps.py  dashboard_query.py  models.py  serializers.py  signals.py  throttles.py  urls.py  utils.py  views.py
blog/api/: __init__.py  constants.py  csrf.py  throttling.py  utils.py
blog/fixtures/: initial_data.json
blog/migrations/: 0001_initial.py  0002_commentvote.py  0003_performance_indexes.py  0004_comment_post_created_index.py  0005_add_comment_post_approved_idx.py  0006_post_blog_post_author_published_idx.py  0006_post_tags_tag_id_index.py  0006_repoint_user_foreign_keys.py
blog/services/: __init__.py  post.py
config/: settings.py  test_settings.py  urls.py
docs/architecture-decisions/: 0001-single-vps-phase1-deployment.md  README.md  new-architecture-decision.md
docs/deployment/: blogit-vps-rollout.md  github-actions-production-release.md  hetzner-vps-bootstrap.md  test-server-deployment-plan.md  vps-phase1-caddy.md
docs/developers/: README.md  START_HERE.md  backend.md  database.md  frontend.md  package-inventory.md  security.md  tooling-testing.md
frontend/: .gitignore  Dockerfile.frontend  Dockerfile.frontend.local  Dockerfile.production  TEST_SERVER_DEPLOYMENT_PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  start-dev.sh  vercel.json  vite.config.js
frontend/public/: dashboard-text-previews.html  preview.html  zero-threat.html
frontend/src/: App.jsx  App.mobile.test.jsx  main.jsx
proxy/: Caddyfile  docker-compose.yml
scripts/: bootstrap-testing-server.sh
templates/: base.html
templates/account/: login.html  signup.html
templates/blog/: dashboard.html  post_detail.html  post_list.html  tag_detail.html  tag_list.html  user_detail.html  user_list.html
tests/robot/: README.md
tests/security/: SECURITY_CHECKLIST.md  load_burst.py  security_smoke.py
tests/unit/: test_bootstrap_testing_site_command.py  test_customuser_cutover_migrations.py  test_demo_fixture.py  test_models.py  test_ninja_auth_preview.py  test_seed_large.py  (+15 more)
(+62 files in other folders)
