[project]
name = "claude-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-anymail>=14.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "djangorestframework>=3.17.1",
    "gunicorn>=23.0.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "whitenoise>=6.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n auto --cov=. --cov-report=term-missing"

[dependency-groups]
dev = [
    "django-silk>=5.5.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.9.0",
    "pytest-xdist>=3.8.0",
    "robotframework>=7.3.2",
    "robotframework-browser>=18.10.0",
    "robotframework-requests>=0.9.7",
    "ruff>=0.15.8",
]
